# Restoria

./: .bandit  .dockerignore  .editorconfig  .gitattributes  .gitignore  .lychee.toml  .markdownlint-cli2.jsonc  .markdownlint.json  .pre-commit-config.yaml  .pytest-progress.jsonl  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FORK_NOTES.md  MANIFEST.in  MIGRATION.md  Makefile  PaperModel.md  README.md  RELEASE_NOTES.md  SECURITY.md  cog.yaml  cog_predict.py  conftest.py  constraints-3.10-compat.txt  constraints-3.11-experimental.txt  docker-compose.yml  index.html  inference_gfpgan.py  mkdocs.yml  noxfile.py  pip-audit.json  pyproject.toml  pyrightconfig.json  renovate.json  requirements-locked.txt  requirements.txt  setup.cfg  setup.py  (+1 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bench-smoke.yml  ci.yml  codeql.yml  docs.yml  gh-pages.yml  link-check.yml  publish-pip.yml  pylint.yml  release.yml  sbom.yml
.tools/: todo_ledger.json
.trunk/: trunk.yaml
1.0/: 404.html  index.html  sitemap.xml
1.0/ACCESSIBILITY/: index.html
1.0/BACKEND_MATRIX/: index.html
1.0/COMPATIBILITY/: index.html
1.0/DECISION_TABLE/: index.html
1.0/DEV_ENV/: index.html
1.0/GFPP_QUICKSTART/: index.html
1.0/HARDWARE_GUIDE/: index.html
1.0/ORT_GUIDE/: index.html
1.0/TORCH2/: index.html
1.0/UI_GUIDE/: index.html
1.0/api/: index.html
1.0/contributing/: index.html
1.0/faq/: index.html
1.0/quickstart/: index.html
1.0/search/: search_index.json
1.0/troubleshooting/: index.html
COMPATIBILITY/: index.html
DEV_ENV/: index.html
TORCH2/: index.html
apps/web/: README.md  next.config.ts  package.json  tsconfig.json
bench/: report.html.jinja  run_bench.py
bench/samples/: README.md
contributing/: index.html
docker/: Dockerfile.cpu-mps  Dockerfile.cuda12  docker-compose.yml
docs/: ACCESSIBILITY.md  BACKEND_MATRIX.md  COMPATIBILITY.md  DECISION_TABLE.md  DEV_ENV.md  GFPP_QUICKSTART.md  HARDWARE_GUIDE.md  ORT_GUIDE.md  TORCH2.md  UI_GUIDE.md  contributing.md  faq.md  index.md  quickstart.md  troubleshooting.md
docs/about/: acknowledgements.md  changelog.md  license.md
docs/api/: core.md  index.md  models.md  utils.md
docs/getting-started/: cloud.md  install.md  quickstart.md
docs/governance/: code-of-conduct.md  contributing.md  docs-conventions.md  ethics.md  maintainers.md  privacy.md  release-playbook.md  security.md  versioning.md
docs/guides/: auto-mode.md  batch-processing.md  choose-backend.md  face-enhancement.md  guided.md  hardware.md  metrics.md  migration.md  repo-rename.md  restore-a-photo.md
docs/product/: brand.md  data-card.md  model-card.md  performance.md
docs/reference/: determinism.md  doctor.md  manifests-and-metrics.md
docs/usage/: api.md  cli.md  colab.md  gradio.md  recipes.md
faq/: index.html
gfpgan/: __init__.py  cli_download.py  gradio_app.py  metrics.py  registry.py  utils.py  weights.py
gfpgan/api/: server.py
gfpgan/archs/: __init__.py  gfpgan_bilinear_arch.py  gfpganv1_arch.py  gfpganv1_clean_arch.py  restoreformer_arch.py  stylegan2_bilinear_arch.py  stylegan2_clean_arch.py
gfpgan/auto/: engine_selector.py
gfpgan/backends/: codeformer_backend.py
gfpgan/data/: __init__.py  ffhq_degradation_dataset.py
gfpgan/engines/: __init__.py  base.py  codeformer_engine.py  gfpgan_engine.py  onnx_engine.py  registry.py  (+2 more)
latest/: 404.html  index.html  sitemap.xml
models/: registry.yml
notebooks/: GFPGAN_Colab.ipynb  Plan_Implementation_Audit.ipynb  README.md  Restoria_Benchmark.ipynb  Restoria_Colab.ipynb  Restoria_Document_Demo.ipynb  Restoria_Ensemble_Demo.ipynb  Restoria_Notebook_Rewriter.ipynb  benchmark.ipynb  benchmark.py  continue_statement_patterns.ipynb  document_demo.ipynb  ensemble_demo.ipynb
out_dry2/: metrics.json
out_dry3/: metrics.json
quickstart/: index.html
results_cli_smoke/: manifest.json
results_cli_smoke2/: manifest.json
results_cli_smoke3/: manifest.json
results_cli_smoke4/: manifest.json
scripts/: convert_gfpganv_to_clean.py  extract_release_notes.py  fmt.sh  lint.sh  parse_landmark.py  setup_uv.sh  test.sh
search/: search_index.json
tests/: conftest.py  test_arcface_arch.py  test_cli_doctor.py  test_cli_doctor_json.py  test_cli_hypir_flags.py  test_cli_list_backends.py  test_cli_list_backends_json.py  test_cli_runtime_info.py  test_core_registry_orchestrator.py  test_ensemble_stub.py  test_ffhq_degradation_dataset.py  test_gfpgan_arch.py  test_gfpgan_model.py  test_gfpgan_ort_smoke.py  test_manifest_noref_metrics.py  test_metrics_adv_quality.py  test_metrics_wrappers.py  test_notebooks_pairing.py  test_onnxruntime_helpers.py  test_orchestrator_enriched_plan.py  test_orchestrator_hypir_rule.py  test_orchestrator_plan.py  test_preset_document.py  test_stylegan2_clean_arch.py  test_torch_compile_fallback.py  test_utils.py
tests_light/: conftest.py  test_api_dry_run.py  test_api_file_serve.py  test_api_jobs_list.py  test_api_jobs_rerun.py  test_api_planner_bridge.py  test_backends_json_has_guided_ensemble.py  test_cli_backends_compile.py  test_cli_dry_run.py  test_cli_dry_run_manifest.py  test_cli_flags.py  test_detector_propagation.py  test_determinism.py  test_diffbir_graceful.py  test_doctor_json_smoke.py  test_engines_registry.py  test_export_onnx_smoke.py  test_gfpp_api_jobs.py  test_gfpp_api_ws.py  test_gfpp_cli_dry_run.py  test_gfpp_cli_dry_run_ort.py  test_guided_backend_noop.py  test_import_guards.py  test_imports.py  test_job_manager_queue.py  test_legacy_cli_dry_run.py  test_metrics_helpers.py  test_noncommercial_gate.py  test_orchestrator_detector.py  test_precision_tiling.py  test_probe_faces_order.py  test_registry_plugins.py  test_restoria_auto_mode.py  test_restoria_cli.py  test_restoria_doctor_json_smoke.py  test_restoria_dry_run_ort_backend.py  test_restoria_folder_manifest.py  test_restoria_list_backends.py  test_restoria_list_backends_schema.py  test_restoria_manifest.py  (+4 more)
troubleshooting/: index.html
(+147 files in other folders)
